--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -1,19 +1,12 @@
-.home-container {
-    text-align: center;
-    margin-top: 50px;
-    padding-left: 20%; /* Levo padding 20% širine stranice */
-  padding-right: 20%;
-    /*background-image:  url('../slike/Pocetna.jpg'); */
-    background-size: cover;
-    background-position: center center;
-    height: 1024px;
-    width: 1850px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #15052F;
-    background-color: plum;
+.home-container1{
+  max-width: 1920px; /* Određena maksimalna širina */
+  width: 100%;
+  margin: 0; 
+  background-image: url(../slike/Pocetna.jpg);
+  background-size: 100%; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   }
   
   @media (min-width: 1024px) {
@@ -42,7 +35,7 @@
     align-items: center;
     width: 100%; /* Širina kontejnera je 80% širine stranice */
     margin: 0 auto; /* Centriranje kontejnera */
-    background-color: plum
+    
   }
   
   .text-side {
@@ -52,27 +45,30 @@
     padding-top: 10%;
     text-align: left; /* Tekst je poravnat levo unutar text-side */
     font-size: 30px; /* Veličina fonta 70px */
-    background-color: transparent
+    
   }
   
   .image-side {
     flex: 1; /* Zauzima proporcionalni deo kontejnera */
     padding: 20px;
-    background-color: plum
+    
     
   }
   
   .image-side img {
-    max-width: 100%; /* Maksimalna širina slike je 100% širine image-side */
-    height: auto; /* Automatska visina slike */
+     /* Maksimalna širina slike je 100% širine image-side */
+    /* Automatska visina slike */
+    padding-top: 20%;
     display: block;
+    width: 300px;
+    height: 300px;
     
     border-radius: 8px; /* Opciono: zaobljeni uglovi slike */
   }
 
   @media (min-width: 768px) {
     .split-container {
-      gap: 20%; /* Razmak između text-side i image-side (20% širine stranice) */
+      gap: 10%; /* Razmak između text-side i image-side (20% širine stranice) */
     }
   }
 
@@ -83,7 +79,7 @@
     align-items: center;
     width: 100%; /* Širina kontejnera je 80% širine stranice */
     margin: 0 auto; /* Centriranje kontejnera */
-    background-color: plum
+    
   }
   
   .text-side1 {
@@ -91,7 +87,7 @@
     padding: 20px;
     text-align: left; /* Tekst je poravnat levo unutar text-side */
     font-size: 30px; /* Veličina fonta 70px */
-    background-color: transparent
+    padding-right: 10%;
   }
   
   .image-side1 {
@@ -99,7 +95,7 @@
     padding-left: 10%; /* Levo padding 20% širine stranice */
     
     padding-top: 10%;
-    background-color: plum
+    
   }
   
   .image-side1   img {
@@ -114,23 +110,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: plum
+    
   }
   
   .home-container2 button {
     padding: 15px 30px;
-    font-size: 18px;
-    background-color: #4CAF50; /* Boja dugmeta */
+    font-size: 20px;
     color: white;
     border: none;
     cursor: pointer;
-    border-top-left-radius: 50%; /* Zaobljavanje gornjeg levog ugla */
-    border-top-right-radius: 50%; /* Zaobljavanje gornjeg desnog ugla */
-    border-bottom-left-radius: 50%; /* Zaobljavanje donjeg levog ugla */
-    border-bottom-right-radius: 50%;
+    border-radius: 100px;
     background-color:  #15052F
   }
 
   .main-paragraph {
     color: #15052F; /* Promena boje teksta */
+    
+  }
+  .main-paragraph2 {
+    color: #15052F; /* Promena boje teksta */
+    font-size: 25px;
+    line-height: 1.6;
+  }
+
+  @media (min-width: 500px) {
+    .split-container2 {
+      gap: 5%; /* Razmak između text-side i image-side (20% širine stranice) */
+    }
   }
