--- a/styles/ContactPage.css
+++ b/styles/ContactPage.css
@@ -1,7 +1,5 @@
 .image-sidee{
-    position: absolute; /* Pozicioniranje slike */
-    top: 35%; /* Pomeranje slike ka gore */
-   right: 5%;
+    
 }
 
 
@@ -10,34 +8,42 @@
   flex-direction: column;
   align-items: center; /* Centriranje elemenata */
   justify-content: center;
-  height: 100vh;
-  transform: translateX(-10%); /* Pomeranje ceo sadržaj ulevo */
-    height: 1024px;
-    width: 1850px;
-    display: flex;
-    .button{
-        left: 10%;
-    }
-    color: #15052F;
-    background-color: plum;
-    position: relative; /* Dodato za pozicioniranje slike */
+  max-width: 100%;
+  width: 1457px;
+  background-color: rgb(190, 224, 250);
+    
   }
   
   @media (min-width: 1024px) {
     .contact-container {
-      padding: 0 30px; /* Povećajte padding na širem ekranu */
+      padding:  30px; /* Povećajte padding na širem ekranu */
     }
   }
   .input-container {
-  margin-top: 20px;
+  padding-top: 20%;
 }
   .input-field {
-  width: 200px; /* Postavljanje širine input polja */
-  margin: 10px; /* Razmak između input polja */
-  padding: 5px; /* Unutrašnji razmak unutar input polja */
+   
+  width: 400px; /* Postavljanje širine input polja */
+  margin: 20px; /* Razmak između input polja */
+  padding: 0; /* Unutrašnji razmak unutar input polja */
   font-size: 14px; /* Veličina teksta unutar input polja */
   border-radius: 15px; /* Zaobljavanje uglova input polja */
-  
+  color: #15052F;
   
 }
 
+.split {
+  display: flex;
+  flex-direction: row;
+}
+
+@media (min-width: 1024px) {
+  .split {
+    gap: 20%; /* Povećajte padding na širem ekranu */
+  }
+}
+h1 {
+  padding-top: 5%;
+  color: #15052F;
+}
