--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -4,7 +4,7 @@
   background-color: rgba(138, 43, 226, 0.5);;
   
   padding: 40px;
-
+  padding-left: 10%;
   display: flex;
   justify-content: space-between;
   
