--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,14 @@
   font-size: 16px;
 }
 
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('./fonts/JetBrainsMono-Regular.woff2') format('woff2'),
+       url('./fonts/JetBrainsMono-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .gallery-button:hover {
   background-color: #0056b3;
 }
