--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -1,8 +1,8 @@
 .footer {
 
-
-  background-color: rgba(138, 43, 226, 0.5);;
-  
+  color: white;
+  background-color: rgb(121, 50, 187);
+  font-family: 'JetBrains Mono', monospace;
   padding: 40px;
   padding-left: 10%;
   display: flex;
@@ -17,7 +17,13 @@
 .footer-right {
   flex: 1;
 }
+.footer-center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
+}
 
 /* Dodajemo stilove za modal */
 .modal {
