--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: 'JetBrains Mono', monospace;
+
   }
   
   @media (min-width: 1024px) {
@@ -79,7 +81,7 @@
     align-items: center;
     width: 100%; /* Širina kontejnera je 80% širine stranice */
     margin: 0 auto; /* Centriranje kontejnera */
-    
+    font-family: 'JetBrains Mono', monospace;
   }
   
   .text-side1 {
