--- a/styles/NavMenu.css
+++ b/styles/NavMenu.css
@@ -1,14 +1,14 @@
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  background-color: rgba(138, 43, 226, 0.5); /* Ljubičasta boja sa 50% prozirnosti */
+  background-color: rgba(138, 43, 226, 0.1); /* Ljubičasta boja sa 50% prozirnosti */
   padding: 30px; /* Dodavanje paddinga sa obe strane od 30px */
   position: fixed;
+ 
   width: 100%;
   top: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  
   z-index: 1000;
 }
 
@@ -18,10 +18,11 @@ nav {
 
 .menu {
   list-style-type: none;
-  padding: 0;
-  margin: 0; /* Uklanjanje margina za bolju centriranost */
+  
+  padding-left: 20%;
+  margin: 10; /* Uklanjanje margina za bolju centriranost */
   display: flex;
-  gap: 20px; /* Razmak između linkova */
+  gap: 10px; /* Razmak između linkova */
   /* Poravnanje elemenata na desnoj strani */
   align-items: center; /* Vertikalno centriranje stavki */
   /* Rastezanje menija kako bi iskoristio slobodan prostor */
@@ -33,13 +34,15 @@ nav {
 
 .menu li a {
   text-decoration: none;
-  color: white; /* Boja teksta */
+  color: rgb(0, 0, 0); /* Boja teksta */
   padding: 10px 15px; /* Razmak unutar linkova */
   font-size: 16px; /* Veličina fonta */
+  font-family: 'JetBrains Mono', monospace;
 }
 
 .menu li a:hover {
-  background-color: #8a2be2; /* Tamnija ljubičasta boja za hover efekt */
+   /* Tamnija ljubičasta boja za hover efekt */
   color: white;
+  transition: 300ms;
   border-radius: 4px; /* Zaobljeni uglovi */
 }
