--- a/styles/GalleryPage.css
+++ b/styles/GalleryPage.css
@@ -1,15 +1,47 @@
 .gallery-container {
-  max-width: 1920px; /* Određena maksimalna širina */
-  width: 100%;
-  margin: 0; 
-  background-image: url(../slike/Pocetna.jpg);
-  background-size: 100%; 
-  display: flex;
-  flex-direction: column;
+  width: 100vw;
+  font-family: 'JetBrains Mono', monospace;
+  background-color: plum;
+  min-height: 100vh;
   align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
+
+.welcomeTekst{
+  width: 1000px;
+  font-family: 'JetBrains Mono', monospace;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 15%;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 50px;
+  gap: 10%;
+}
+
+.paragraf1{
+  font-size: 20px;
+  font-family: 'JetBrains Mono', monospace;
+  color: #15052F;
+  align-items: center;
+  justify-content: center;
+}
+h1 {
+  align-items: center;
+  
+}
+
+.sekcija1{
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
 .section1 {
+
   padding-top: 12%;
   display: flex;
   flex-direction: column;
@@ -46,4 +78,26 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
+}
+
+.galerijaTekst{
+  align-items: center;
+  color: #15052F;
+}
+
+.text-above-image{
+  align-items: center;
+  color: #15052F;
+}
+
+.content-wrapper{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.gallery-image{
+  width: 600px;
 }
