--- a/styles/CartPage.css
+++ b/styles/CartPage.css
@@ -1,7 +1,8 @@
 .cart-container {
   width: 100vw;
   font-family: 'JetBrains Mono', monospace;
-  background-color: plum;
+  background-image: url(../slike/kontaktPozadina.png);
+  background-size: 100vw;
   min-height: 100vh;
   align-items: center;
   display: flex;
@@ -11,7 +12,49 @@
 
 
 .kurs-container{
-
+  display: flex;
+  flex-direction: row;
   width: 1000px;
+  gap: 10%;
+}
+ 
+.pregledKurseva{
+  width: 60%;
+  border-color: aliceblue;
 }
 
+.pregledNarudzbine{
+  width: 40%;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
+  padding: 20px;
+  gap: 30px;
+}
+h1{
+  font-family: 'JetBrains Mono', monospace;
+  color: #15052f;
+}
+h4{
+  font-family: 'JetBrains Mono', monospace;
+  color: #15052f;
+}
+.subtotal{
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  gap: 80%;
+}
+
+
+.ukupno{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  gap: 70%;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.checkout-btn{
+  width: 100%;
+  background-color: green;
+}
