--- a/styles/Kurs.css
+++ b/styles/Kurs.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     line-height: 1.6;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255,0.2);
     border-radius: 13px;
     align-items: center;
      justify-content: center;
