--- a/styles/AboutPage.css
+++ b/styles/AboutPage.css
@@ -152,3 +152,12 @@
 .sekcija3tekst{
     font-size: 20px;
 }
+ @media (max-width: 768px) {
+  .kontejner55 {
+   
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+}
