--- a/styles/Button.css
+++ b/styles/Button.css
@@ -6,3 +6,12 @@
     border-radius: 4px;
     cursor: pointer;
   }
+   @media (max-width: 768px) {
+  .btn {
+   
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+}
