--- a/styles/InputField.css
+++ b/styles/InputField.css
@@ -12,3 +12,12 @@
     padding: 8px;
     box-sizing: border-box;
   }
+   @media (max-width: 768px) {
+  .input-field {
+   
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+}
