--- a/styles/NavMenu.css
+++ b/styles/NavMenu.css
@@ -44,3 +44,12 @@ nav {
   transition: 300ms;
   border-radius: 4px; 
 }
+ @media (max-width: 768px) {
+  .nav{
+   
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+}
