--- a/styles/TermsPage.css
+++ b/styles/TermsPage.css
@@ -92,3 +92,12 @@
     font-size: 18px;
     font-weight: bold;
 }
+ @media (max-width: 768px) {
+  .usloviKoriscenja {
+   
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+}
