--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -59,6 +59,15 @@
   text-decoration: none;
   font-weight: bold;
 }
+.footer-vreme a {
+  color: white; 
+  text-decoration: none;
+  font-weight: bold;
+}
+.footer-vreme a:hover {
+  text-decoration: underline;
+  color: #e4a9e0;
+}
 
 .footer-terms a:hover {
   text-decoration: underline;
