--- a/styles/Weather.css
+++ b/styles/Weather.css
@@ -12,7 +12,20 @@
     gap: 20%;
 
 }
+.bitcoin-price-container{
+  
+    width: 100vw;
+    font-family: 'JetBrains Mono', monospace;
+    background-image: url(../slike/uslovi1.png);
+    background-size: 100vw;
+    min-height: 100vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20%;
 
+}
 .weather-container h2 {
   font-size: 1.5rem;
   color: #333;
